--- a/AzureMiddayMingle/AzureMiddayMingle.csproj
+++ b/AzureMiddayMingle/AzureMiddayMingle.csproj
@@ -311,6 +311,7 @@
     <Content Include="Views\Employees\Details.cshtml" />
     <Content Include="Views\Employees\Edit.cshtml" />
     <Content Include="Views\Employees\Index.cshtml" />
+    <Content Include="Views\Home\Suggestions.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
