--- a/AzureMiddayMingle/AzureMiddayMingle.csproj
+++ b/AzureMiddayMingle/AzureMiddayMingle.csproj
@@ -323,6 +323,8 @@
     <Content Include="Views\Home\Suggestions.cshtml" />
     <Content Include="Views\Home\CreateProfile.cshtml" />
     <Content Include="Views\Home\MyProfile.cshtml" />
+    <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\ViewMyProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
