--- a/AzureMiddayMingle/AzureMiddayMingle.csproj
+++ b/AzureMiddayMingle/AzureMiddayMingle.csproj
@@ -325,6 +325,7 @@
     <Content Include="Views\Home\MyProfile.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\ViewMyProfile.cshtml" />
+    <Content Include="Views\Shared\ShowHideLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
